Connecting database with Spring Data JPA

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,15 @@
 spring:
-  profiles:
-    active:
-      - dev
+  application:
+    name: SpringBootBasic
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/basic-spring-boot
+    username: root
+    password: tiendatMysql@2003
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
